# libxfce4ui

./: .clang-format  .cppcheck-false-positives  .gcc-analyzer-false-positives  .gitignore  .gitlab-ci.yml  .scan-build-false-positives  Makefile.am  NEWS  README.md  autogen.sh  configure.ac  configure.ac.in  meson.build  meson_options.txt
docs/: Makefile.am  libxfce4ui-docs.xml
docs/reference/: Makefile.am  libxfce4ui-docs.xml  libxfce4ui-docs.xml.in  libxfce4ui-sections.txt  libxfce4ui.types  meson.build
glade/: Makefile.am  libxfce4ui-2.xml  libxfce4ui-glade.c  meson.build
icons/: Makefile.am  meson.build
icons/pixmaps/: Makefile.am
libxfce4kbd-private/: .clang-format  Makefile.am  libxfce4kbd-private-3.pc.in  libxfce4kbd-private.symbols.in  meson.build  xfce-shortcut-dialog.c  xfce-shortcut-dialog.h  xfce-shortcuts-editor-dialog.c  xfce-shortcuts-editor-dialog.h  xfce-shortcuts-editor.c  xfce-shortcuts-editor.h  xfce-shortcuts-grabber.c  xfce-shortcuts-grabber.h  xfce-shortcuts-provider.c  xfce-shortcuts-provider.h  xfce-shortcuts-xfwm4.c  xfce-shortcuts-xfwm4.h  xfce-shortcuts.c  xfce-shortcuts.h  xfce4-keyboard-shortcuts.xml
libxfce4ui/: .clang-format  Libxfce4ui-2.0.metadata  Makefile.am  abicheck.sh  abicheck.sh.in  libxfce4ui-config.c  libxfce4ui-config.h.in  libxfce4ui-enums.h  libxfce4ui-marshal.list  libxfce4ui-private.h  libxfce4ui.geany  libxfce4ui.gresource.xml  libxfce4ui.h  libxfce4ui.h.in  libxfce4ui.symbols  libxfce4ui.symbols.in  make-libxfce4ui-alias.pl  meson.build  xfce-app-chooser.c  xfce-app-chooser.h  xfce-app-chooser.ui  xfce-cell-renderer-icon.c  xfce-cell-renderer-icon.h  xfce-clipboard-manager.c  xfce-clipboard-manager.h  xfce-dialogs.c  xfce-dialogs.h  xfce-execute.c  xfce-execute.h  xfce-filename-input.c  xfce-filename-input.h  xfce-gdk-extensions.c  xfce-gdk-extensions.h  xfce-gdk-pixbuf-extensions.c  xfce-gdk-pixbuf-extensions.h  xfce-gtk-extensions.c  xfce-gtk-extensions.h  xfce-icon-chooser-dialog.c  xfce-icon-chooser-dialog.h  xfce-icon-chooser-model.c  (+31 more)
libxfce4ui/resources/: libxfce4ui.gresource.xml
po/: LINGUAS  POTFILES  POTFILES.in  am.po  ar.po  ast.po  az.po  be.po  bg.po  bn.po  ca.po  cs.po  cy.po  da.po  de.po  el.po  en_AU.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa_IR.po  fi.po  fr.po  gl.po  he.po  hr.po  hu.po  hy.po  hy_AM.po  hye.po  id.po  ie.po  is.po  it.po  ja.po  ka.po  kk.po  ko.po  (+30 more)
python-example/: test-introspection.py  test-item-list-ext.py  test-item-list.py
tests/: Makefile.am  meson.build  test-ui.c
xfce-desktop-item-edit/: Makefile.am  main.c  meson.build  xfce-die-command-entry.c  xfce-die-command-entry.h  xfce-die-command-model.c  xfce-die-command-model.h  xfce-die-desktop-model.c  xfce-die-desktop-model.h  xfce-die-editor.c  xfce-die-editor.h  xfce-die-enum-types.c  xfce-die-enum-types.h  xfce-die-utils.c  xfce-die-utils.h
xfce-open/: Makefile.am  main.c  meson.build
xfce4-about/: Makefile.am  contributors.h  main.c  meson.build  system-info.c  system-info.h  translators.h  xfce4-about-dialog.glade  xfce4-about.desktop.in
